# EyeHearYou

./: .gitignore  =0.4.6  README.md  README_REFACTOR.md  SETTINGS_ANALYSIS.md  WARNINGS_ANALYSIS.md  app_settings.json  bundle_code.py  create_test_image.py  install-cpu.bat  install-gpu.bat  install.py  main.py  main_gui.py  ocr_script.py  package-lock.json  package.json  pyproject.toml  requirements-cpu.txt  requirements-gpu.txt  run_cli.py  run_gui.py  run_server.py  server.py  test_flash_attention.py  test_flash_attention_versions.md  test_h2ovl.py  test_kokoro_tts.py  test_ocr_model.py  test_paddle.py  test_rapidocr_gpu.py  tsconfig.json  ui.html
src/: __init__.py
src/backend/: __init__.py  app.py  cli.py  hotkey.py  main.py  state.py
src/backend/core/: __init__.py  capture.py  config.py  debug.py  detection.py  extraction.py  filtering.py  image_utils.py  merging.py  model_loader.py  preprocessing.py  task_manager.py  torchvision_patch.py  tts.py
src/backend/routes/: __init__.py  config.py  detection.py  extraction.py  screenshot.py
src/frontend/: __init__.py  constants.py  index.html  theme.py  widgets.py  window.py  worker.py
src/frontend/css/: styles.css
src/frontend/ts/: config.ts  detection.ts  main.ts  merge.ts  sse.ts  types.ts  ui.ts
tests/: test_filtering_merging.py  test_selection.py
