[project]
name = "visual-novel-ocr"
version = "0.1.0"
description = "Lightweight OCR tool for visual novels and games - one-key text extraction with AI-powered OCR. Press Ctrl+Shift+Alt+Z to capture, detect, extract, and copy text to clipboard automatically."
requires-python = ">=3.12"
dependencies = [
    "gitignore-parser>=0.1.0",
    "keyboard>=0.13.5",
    "numpy>=1.24.0",
    "opencv-python>=4.8.0",
    "pillow>=12.1.0",
    "rapidocr-onnxruntime",
    "pygetwindow>=0.0.9",
    "pyperclip>=1.8.2",
    "pyqt6",
    "streamlit>=1.52.2",
    # H2OVL-Mississippi dependencies (non-torch dependencies only)
    # NOTE: transformers, accelerate, timm, and peft are NOT included here
    # because they require torch, which would be installed as CPU version.
    # Install them separately with: uv pip install transformers accelerate timm peft
    "einops>=0.7.0",
    "sentencepiece>=0.1.99",
    "huggingface-hub[hf-xet]>=0.36.0",
]

# Note: RapidOCR is used for text detection instead of PaddleOCR to avoid
# conflicts with PyTorch. RapidOCR uses ONNX Runtime which runs on CPU and
# doesn't interfere with PyTorch installations.
#
# Installation:
#   uv pip install rapidocr-onnxruntime
#
# RapidOCR runs on CPU via ONNX Runtime and doesn't require GPU or CUDA.
# It's lightweight and doesn't conflict with PyTorch dependencies.
#
# The application gracefully handles missing RapidOCR - it will process the full
# image instead of detecting text regions if RapidOCR is not installed.
#
# See README.md for detailed installation instructions
#
# H2OVL-Mississippi dependencies (torch-dependent packages):
# NOTE: transformers, accelerate, timm, and peft are NOT included in dependencies
# because they require torch. If listed here, uv sync will install torch (CPU version)
# from PyPI, which would replace the CUDA version.
#
# Kokoro TTS dependencies:
# NOTE: kokoro, soundfile, and sounddevice are NOT included in dependencies
# because kokoro requires torch. If listed here, uv sync will install torch (CPU version)
# from PyPI, which would replace the CUDA version.
# Install them separately via install-gpu.bat or manually after installing PyTorch.
#
# For H2OVL-Mississippi-0.8B with CUDA support, install separately AFTER uv sync:
#   RECOMMENDED: Run install-gpu.bat for automated installation
#   
#   OR install manually:
#   1. Install PyTorch 2.7.0 with CUDA 12.8:
#      uv pip install torch==2.7.0 torchvision==0.22.0 torchaudio==2.7.0 --index-url https://download.pytorch.org/whl/cu128
#      NOTE: torchvision 0.22.0 has a compatibility issue with PyTorch 2.7.0 (nms operator).
#      This is automatically handled by src/backend/core/torchvision_patch.py at runtime.
#   2. Install Flash Attention 2.7.4 (prebuilt Windows wheel):
#      python -c "import urllib.request, os, shutil; temp_dir = os.environ.get('TEMP', '.'); src = os.path.join(temp_dir, 'flash_attn_temp.whl'); dst = os.path.join(temp_dir, 'flash_attn-2.7.4.post1+cu128torch2.7.0cxx11abiFALSE-cp312-cp312-win_amd64.whl'); urllib.request.urlretrieve('https://huggingface.co/lldacing/flash-attention-windows-wheel/resolve/main/flash_attn-2.7.4.post1+cu128torch2.7.0cxx11abiFALSE-cp312-cp312-win_amd64.whl', src); shutil.move(src, dst)"
#      uv pip install "%TEMP%\flash_attn-2.7.4.post1+cu128torch2.7.0cxx11abiFALSE-cp312-cp312-win_amd64.whl"
#   3. Install H2OVL dependencies:
#      uv pip install transformers accelerate timm peft
#   4. Install Kokoro TTS dependencies:
#      uv pip install kokoro>=0.9.2 soundfile>=0.12.1 sounddevice>=0.4.6
#
# NOTE: This configuration (PyTorch 2.7.0 + CUDA 12.8 + Flash Attention 2.7.4) is the tested
# and working setup. Other versions may have compatibility issues.

[tool.uv]
environments = [
    "sys_platform == 'win32'",
]
