[project]
name = "visual-novel-ocr"
version = "0.1.0"
description = "Lightweight OCR tool for visual novels and games - one-key text extraction with AI-powered OCR. Press Ctrl+Shift+Alt+Z to capture, detect, extract, and copy text to clipboard automatically."
requires-python = ">=3.12"
dependencies = [
    "gitignore-parser>=0.1.0",
    "keyboard>=0.13.5",
    "numpy>=1.24.0",
    "opencv-python>=4.8.0",  # cv2
    "pillow>=12.1.0",
    "rapidocr-onnxruntime",
    "pygetwindow>=0.0.9",
    "pyperclip>=1.8.2",
    "pywin32>=306; sys_platform == 'win32'",  # win32clipboard for Windows clipboard fallback
    "pyqt6",
    "streamlit>=1.52.2",
    # H2OVL-Mississippi dependencies (non-torch dependencies only)
    # NOTE: transformers, accelerate, timm, and peft are NOT included here
    # because they require torch, which would be installed as CPU version.
    # Install them separately with: uv pip install transformers accelerate timm peft
    "einops>=0.7.0",
    "sentencepiece>=0.1.99",
    "huggingface-hub[hf-xet]>=0.36.0",
    "pip>=25.3",
    # Kokoro TTS dependencies (non-torch dependencies)
    # NOTE: kokoro, soundfile, sounddevice, loguru, misaki[en], and en-core-web-sm are NOT included here
    # because misaki[en] requires torch, which would be installed as CPU version.
    # Install them separately via install.py or manually after installing PyTorch.
]

# Note: RapidOCR is used for text detection instead of PaddleOCR to avoid
# conflicts with PyTorch. RapidOCR uses ONNX Runtime which runs on CPU and
# doesn't interfere with PyTorch installations.
#
# Installation:
#   uv pip install rapidocr-onnxruntime
#
# RapidOCR runs on CPU via ONNX Runtime and doesn't require GPU or CUDA.
# It's lightweight and doesn't conflict with PyTorch dependencies.
#
# The application gracefully handles missing RapidOCR - it will process the full
# image instead of detecting text regions if RapidOCR is not installed.
#
# See README.md for detailed installation instructions
#
# H2OVL-Mississippi dependencies (torch-dependent packages):
# NOTE: transformers, accelerate, timm, and peft are NOT included in dependencies
# because they require torch. If listed here, uv sync will install torch (CPU version)
# from PyPI, which would replace the CUDA version.
#
# Kokoro TTS dependencies:
# NOTE: kokoro, soundfile, and sounddevice are NOT included in dependencies
# because kokoro requires torch. If listed here, uv sync will install torch (CPU version)
# from PyPI, which would replace the CUDA version.
# Install them separately via install-gpu.bat or manually after installing PyTorch.
#
# For H2OVL-Mississippi-0.8B with CUDA support, install separately AFTER uv sync:
#   RECOMMENDED: Run install-gpu.bat for automated installation
#   
#   OR install manually:
#   1. Install PyTorch 2.8.0 with CUDA 12.9:
#      uv pip install torch==2.8.0 torchvision==0.23.0 torchaudio==2.8.0 --index-url https://download.pytorch.org/whl/cu129
#      NOTE: PyTorch 2.8.0 does NOT require the torchvision patch (unlike 2.7.0).
#      If using PyTorch 2.7.0, set TORCHVISION_PATCH=1 environment variable to enable the patch.
#   2. Install Flash Attention 2.8.2 (prebuilt Windows wheel from ussoewwin):
#      python -c "from huggingface_hub import hf_hub_download; import shutil, os; temp_dir = os.environ.get('TEMP', '.'); downloaded = hf_hub_download(repo_id='ussoewwin/Flash-Attention-2_for_Windows', filename='flash_attn-2.8.2+cu129torch2.8.0cxx11abiTRUE-cp312-cp312-win_amd64.whl', cache_dir=temp_dir); shutil.copy(downloaded, os.path.join(temp_dir, 'flash_attn-2.8.2+cu129torch2.8.0cxx11abiTRUE-cp312-cp312-win_amd64.whl'))"
#      uv pip install "%TEMP%\flash_attn-2.8.2+cu129torch2.8.0cxx11abiTRUE-cp312-cp312-win_amd64.whl"
#   3. Install H2OVL dependencies:
#      uv pip install transformers accelerate timm peft
#   4. Install Kokoro TTS dependencies:
#      uv pip install kokoro>=0.9.2 misaki[en]>=0.9.4 loguru>=0.7.0 soundfile>=0.12.1 sounddevice>=0.4.6
#   5. Install spacy model for Kokoro TTS:
#      uv run python -m spacy download en_core_web_sm
#
# NOTE: This configuration (PyTorch 2.8.0 + CUDA 12.9 + Flash Attention 2.8.2) is the tested
# and working setup. PyTorch 2.8.0 does NOT require the torchvision patch.

[tool.uv]
environments = [
    "sys_platform == 'win32'",
]
