[project]
name = "visual-novel-ocr"
version = "0.1.0"
description = "Accessibility OCR tool that reads text aloud - one-key text extraction with AI-powered OCR and automatic text-to-speech. Press Ctrl+Shift+Alt+Z to capture, detect, extract, and read text aloud automatically. Perfect for users who cannot read text on screen."
requires-python = ">=3.12"
dependencies = [
    "gitignore-parser==0.1.13",
    "keyboard==0.13.5",
    "numpy==2.4.1",
    "opencv-python==4.11.0.86",  # cv2
    "pillow==12.1.0",
    "mss==10.0.0",
    "rapidocr-onnxruntime==1.4.4",
    "pygetwindow==0.0.9",
    "pyqt6==6.10.2",
    "streamlit==1.52.2",
    # H2OVL-Mississippi dependencies (non-torch dependencies only)
    # NOTE: transformers, accelerate, timm, and peft are NOT included here
    # because they require torch, which would be installed as CPU version.
    # Install them separately with exact versions via install.py
    "einops==0.8.1",
    "sentencepiece==0.2.1",
    "huggingface-hub[hf-xet]==0.36.0",
    "pip==25.3",
    # Kokoro TTS dependencies (non-torch dependencies)
    # NOTE: kokoro, soundfile, sounddevice, loguru, misaki[en], and en-core-web-sm are NOT included here
    # because misaki[en] requires torch, which would be installed as CPU version.
    # Install them separately via install.py with exact versions.
]

# ⚠️ IMPORTANT: This project is designed for NVIDIA GPU with CUDA.
# CPU implementation is UNTESTED and VERY SLOW (10-30+ seconds per capture).
# GPU with CUDA is STRONGLY RECOMMENDED for acceptable performance.
#
# ⚠️ VERSION SENSITIVITY: This project is VERY sensitive to library versions.
# All dependencies use EXACT versions (==) to ensure compatibility.
# Do NOT upgrade packages without testing thoroughly.
#
# Note: RapidOCR is used for text detection instead of PaddleOCR to avoid
# conflicts with PyTorch. RapidOCR uses ONNX Runtime which runs on CPU and
# doesn't interfere with PyTorch installations.
#
# Installation:
#   uv pip install rapidocr-onnxruntime
#
# RapidOCR runs on CPU via ONNX Runtime and doesn't require GPU or CUDA.
# It's lightweight and doesn't conflict with PyTorch dependencies.
#
# The application gracefully handles missing RapidOCR - it will process the full
# image instead of detecting text regions if RapidOCR is not installed.
#
# See README.md for detailed installation instructions
#
# H2OVL-Mississippi dependencies (torch-dependent packages):
# NOTE: transformers==4.57.3, accelerate==1.12.0, timm==1.0.24, peft==0.18.1 are NOT included here
# because they require torch. If listed here, uv sync will install torch (CPU version)
# from PyPI, which would replace the CUDA version.
# ⚠️ CPU version is NOT RECOMMENDED - very slow and untested.
# Install them separately via install.py with exact versions after installing PyTorch.
#
# Kokoro TTS dependencies:
# NOTE: kokoro==0.9.4, misaki[en]==0.9.4, loguru==0.7.3, soundfile==0.13.1, sounddevice==0.5.3
# are NOT included in dependencies because kokoro requires torch. If listed here, uv sync will
# install torch (CPU version) from PyPI, which would replace the CUDA version.
# ⚠️ CPU version is NOT RECOMMENDED - very slow and untested.
# Install them separately via install.py with exact versions after installing PyTorch.
#
# For H2OVL-Mississippi-0.8B with CUDA support, install separately AFTER uv sync:
#   RECOMMENDED: Run install.py for automated installation (will detect GPU automatically)
#   
#   OR install manually:
#   1. Install PyTorch 2.8.0 with CUDA 12.9:
#      uv pip install torch==2.8.0 torchvision==0.23.0 torchaudio==2.8.0 --index-url https://download.pytorch.org/whl/cu129
#      NOTE: PyTorch 2.8.0 does NOT require the torchvision patch (unlike 2.7.0).
#      If using PyTorch 2.7.0, set TORCHVISION_PATCH=1 environment variable to enable the patch.
#   2. Install Flash Attention 2.8.2 (prebuilt Windows wheel from ussoewwin):
#      python -c "from huggingface_hub import hf_hub_download; import shutil, os; temp_dir = os.environ.get('TEMP', '.'); downloaded = hf_hub_download(repo_id='ussoewwin/Flash-Attention-2_for_Windows', filename='flash_attn-2.8.2+cu129torch2.8.0cxx11abiTRUE-cp312-cp312-win_amd64.whl', cache_dir=temp_dir); shutil.copy(downloaded, os.path.join(temp_dir, 'flash_attn-2.8.2+cu129torch2.8.0cxx11abiTRUE-cp312-cp312-win_amd64.whl'))"
#      uv pip install "%TEMP%\flash_attn-2.8.2+cu129torch2.8.0cxx11abiTRUE-cp312-cp312-win_amd64.whl"
#   3. Install H2OVL dependencies (exact versions):
#      uv pip install transformers==4.57.3 accelerate==1.12.0 timm==1.0.24 peft==0.18.1
#   4. Install Kokoro TTS dependencies (exact versions):
#      uv pip install kokoro==0.9.4 misaki[en]==0.9.4 loguru==0.7.3 soundfile==0.13.1 sounddevice==0.5.3
#   5. Install spacy model for Kokoro TTS:
#      uv run python -m spacy download en_core_web_sm
#
# NOTE: This configuration (PyTorch 2.8.0 + CUDA 12.9 + Flash Attention 2.8.2) is the tested
# and working setup. PyTorch 2.8.0 does NOT require the torchvision patch.

[tool.uv]
environments = [
    "sys_platform == 'win32'",
]
